--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       <h1>Parcel Tracking</h1>
       <!-- {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a> -->
-      {% endif %}
+      <!-- {% endif %} -->
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
