--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -34,6 +34,12 @@ body {
   color: $body-text-color;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 input {
   width: 50%;
   padding: 10px;
