--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
+    <script src="script.js"></script>
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
@@ -22,7 +23,7 @@
       <form onsubmit="return false">
         <label for="tracking-number">Enter Tracking Number:</label>
         <input type="text" id="tracking-number" required>
-        <button type="submit" onclick="trackParcel()">Track</button>
+        <button type="submit" onclick="redirectToDetails()">Track</button>
       </form> 
       <!-- {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a> -->
