--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       <form onsubmit="return false">
         <label for="tracking-number">Enter Tracking Number:</label>
         <input type="text" id="tracking-number" required>
-        <button type="submit" onclick="redirectToDetails()">Track</button>
+        <button type="submit" onclick="trackParcel()">Track</button>
       </form> 
       <!-- {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a> -->
